@@ -5,6 +5,7 @@ Version 1.3.5
 - fixed Content-Type header parsing (bug #1346495)
 - Unicode build of wxWidgets 2.6 is now required
 - fixed bug with entering numbers when using German translation (#1325590)
+- fixed broken layout on startup when showing comments window (#1313612)
 - added more translations:
      Macedonian (Jovan Kostovski)
      Arabic (Mohammed al zaid)
